尝试第一篇博客

--- a/test_long/folder1/极乐迪斯科游戏体验与感想.md
+++ b/test_long/folder1/极乐迪斯科游戏体验与感想.md
@@ -10,9 +10,13 @@
 
 \------------------------------------------------------------
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.001.jpeg)
+
 现在回到这款游戏。每个大属性下都下设了6个子技能，分配到大属性的点数就是各个子技能的基础等级，同时也限制了子技能的提升上限。 这些属性和技能会以各自的方式影响你的游玩过程和体验：一个精神高的角色可以轻松看穿他人心声，掌握场合气氛，依靠精神威压逼迫他人说出真相；一个智力优秀的警探可以通过自己的学识、思维和口才快速破获案件；体格健壮的警探可以用自己的肌肉暴力通过阻碍；而身手敏捷的警探可以轻松越过障碍，在关键审判下抢夺先机。不同的技能等级可能会导致你对同一个案件获取到不同的信息，也有可能导致你主动或被迫要进行不同的支线。
 
 除此之外，部分技能在对话时可以以内心独白的形式为你提供帮助，与他人对话遇到难题，又或者是缺少线索无法推进时，这些技能可以帮助你出谋划策，或是猜测对方的心理活动。此外，钢筋铁骨和平心定气较为特殊，这两个技能相当于你的生命和士气，这两者在游戏中作为“生命条“存在，其中一个归零则游戏结束；过度的忽略某属性，可能导致你的角色生命低，一旦遇到事件就面临危机。当然，游戏中也提供了应急药物。
+
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.002.jpeg)
 
 就如前面所述，游戏中基本没有考验手操的地方，绝大部分都由对话推动。相比于手速，游戏更考验你的阅读能力和手气。
 
@@ -22,6 +26,8 @@
 
 主动检定则直接出现在接下来的对话树中，可以自行选择是否进行判定（某些情况下必须做出选择，错过就没有机会）；此外，主动检定还分为白色检定和红色检定；红色检定表示该选项是不可逆的，它会影响接下来的剧情；白色检定则是游戏的难度修正机制；一次失败，可以选择想办法堆高属性再次检定；多出现在一些无关紧要的位置。作为一个跑团游戏，如果你选择了玩它，那表示你也应该接受“不是一切都能如你所愿“这件事。
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.003.jpeg)
+
 游戏开局分配的点数有限，游戏中也没有什么能够永久增加属性的方法；但游戏提供了烟酒 药品等能短时间提高属性的道具，和穿上以后能够增强某项技能但也有负面作用的各项服装。在进行检定时，可以提前换上对应的服装，吃对应成瘾品来暂时性提高某项能力，从而提高检定成功的机率。
 
 需要注意的是，对于这款游戏，并不是所有点数满值就意味着天下无敌。任何一个属性过高都会导致这种思想负面占用你的思绪，两种人格特性间还会互相吵架，干扰你的选择。并且对于那些需要十几点乃至20点才能通过的判定面前，玩家依然只是一个普通人，只是成功的概率大了点。
@@ -30,27 +36,41 @@
 
 除过独特的加点和判定，游戏还额外增加了一个名为“思维阁”的加成系统：在游戏中，玩家扮演的是一个失忆的侦探，在探案的过程中自己的人格也不断复苏。选择不同对话有可能在你的脑海中突然迸发出一些新念头，这些思维会暂时存在于脑海中；玩家可以选择性地仔细琢磨一些思维，用自己的思维去解答自己的疑问，将其内在化，作为自己人生的一部分。不同的思维在诞生时和完成时都会有不同的增益和减益效果，可以根据自己的需求和爱好进行琢磨。
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.004.jpeg)
+
 尽管思维阁在游戏中的存在意义是为了给玩家增加额外的技能和点数，但制作组依然很用心地让每一个思维都有了自己的实质意义。在一个思维出现时，它会向你提出实质的问题，而在思维琢磨完成以后，你又会从自身的思考中得到解答，帮助玩家更好地沉浸于游戏中。
 
 此外还有一个值得一提的设计.尽管游戏中并不限制你的所作所为，但你所做出的各种行为都会被记录下来；就记录在档案的右侧。不同的选项暗示你内心支持什么样的想法，但尽管如此，游戏本身并不会加以批判或是赞扬，作为玩家，我们应该认识到这只是个游戏，不要因此而在做选择时畏手畏脚，去做自己想要宣称的行为。
+
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.005.jpeg)
 
 这是一个非传统的游戏；于其说它是一个RPG游戏，倒不如说它更像是一部小说，或者文字冒险游戏。它描述的是一队警探的探案经历，但游戏的背景，人们的精神面貌乃至对话无不展现的是这个时代的精精神风貌。具体的内容和游戏有着密不可分的联系，有兴趣的人可以自己去尝试着玩一下。后文有游戏的一些操作技巧和注意事项，如果不想玩的话也可以直接查看最后的剧透。此外，记录的数值达到某个数字以后还能解锁新的思维可用，至少冲着这点也值得多试试各种选项。
 
 \------
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.006.png)
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.007.png)
 
 游戏整体风格严肃，玩家在游戏中不仅仅在拾回自己的过去，也是在认识制作组构建出的世界。尽管如此，游戏还是加入了不少的幽默桥段，而游戏又会将它神秘的一面在你惆怅时一鼓展示出来。单纯的图片难以表现其效果，还是要自己去游玩才能感受到其魅力所在。
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.008.jpeg)
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.009.jpeg)
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.010.jpeg)
 
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.011.png)
+
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.012.png)
 
 \----
 
 一些游戏的提示，可能涉及剧透，但掌握以后可以帮助你更好地体验剧情：
 
 1\. 绿色球体不要着急点，在码头和游艇上的野松公司代表谈话，可以获得“第十五个寡头公司思维”；每点击一个绿色小球，都可以获得0.1雷亚尔；后期在菲尔德大厦前和父子交流，可以解锁思维“三教九流中心”，每次进行博学多闻的检定时都可以获得2雷亚尔和经验；解锁这两个思维到后期完全不愁吃住。
+
+![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.013.jpeg)
 
 2\. 没事的时候装备上撬棍，有的货物只能撬开；此外装备塑料袋时，可以捡地上的空瓶回收卖钱。平时多按tab或者鼠标右键，可以查看当前摄像机范围内还有哪些可互动的元素，到处都有零钱可以收集。
 
@@ -86,7 +106,7 @@
 
 对于灰域，整个游戏的描述少之又少，个人认为，“灰域”可能是一个暗示或者多重含义。第一层意思是指游戏中存在的这种“虚无”，第二层是指人类意识形态之外尚未探索到的位置。
 
-
+`	`![](Aspose.Words.d1584f1e-84db-400f-a6ea-a31b2e685640.014.jpeg)
 
 玩家在游戏中是一个失去了身份、失去了记忆，喝酒喝到断片，满脑子就剩下旧时代迪斯科的警探，就连名字都没能想得起来，只能靠同僚和他人帮忙来尝试找回。即使是这样，主角依然还保留了一些他的警探能力，还能像一个开罐器一样，狠狠撬开证人和罪犯的嘴。
 
